# papercrawler

./: .gitignore  CHANGELOG.md  README.md  _setup_github.py  _test_github.py  _test_proxy.py  papercrawler.toml.example  papercrawler_test.toml  pyproject.toml
config/: papercrawler.toml.example  papercrawler_test.toml
docs/: architecture.html
papercrawler/: __init__.py  cli.py  config.py  models.py  paths.py
papercrawler/access/: __init__.py  checker.py  unpaywall.py
papercrawler/classify/: __init__.py  categorizer.py  domain_filter.py  semantic_filter.py
papercrawler/cli/: __init__.py  __main__.py  _helpers.py  config.py  convert.py  download.py  history.py  recategorize.py  search.py
papercrawler/convert/: __init__.py  markitdown_converter.py
papercrawler/download/: __init__.py  database.py  downloader.py  scihub_downloader.py  storage.py
papercrawler/export/: csv_writer.py
papercrawler/metadata/: __init__.py  extractor.py
papercrawler/search/: __init__.py  arxiv.py  base.py  chemrxiv.py  chemrxiv_via_crossref.py  core.py  crossref.py  manager.py  openalex.py  pubmed.py  semantic_scholar.py
papercrawler/utils/: __init__.py  author_filter.py  dedup.py  naming.py  rate_limiter.py  scholar.py
papers/: _download_log.db  _index.json  _index.md
papers/2012_dmitry_reactions_singly_reduced_ethylene_carbonate_jp210345b/: metadata.json  paper.md
papers/2014_md_reaxff_reactive_force_field_simulations_2005408jes/: metadata.json  paper.md
tests/: test_20_papers.py  test_from_csv.py  test_full_flow.py  test_paper_dl.py
(+18 files in other folders)
